# ferrum-edge-git-forge-ops

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.gitforgeops/: config.example.yaml  policies.example.yaml
.github/: dependabot.yml
.github/workflows/: apply-on-merge.yml  drift-check.yml  materialize-file.yml  release.yml  rotate.yml  rust-ci.yml  security.yml  validate-pr.yml
resources/ferrum/consumers/: _example.yaml
resources/ferrum/plugins/: _example.yaml
resources/ferrum/proxies/: _example.yaml
resources/ferrum/upstreams/: _example.yaml
src/: cli.rs  error.rs  http_client.rs  jwt.rs  lib.rs  main.rs  state.rs
src/apply/: api_target.rs  file_target.rs  mod.rs
src/config/: assembler.rs  env.rs  loader.rs  mod.rs  repo_config.rs  resolved.rs  schema.rs
src/diff/: best_practice.rs  breaking.rs  mod.rs  resource_diff.rs  security.rs
src/import/: from_api.rs  from_file.rs  mod.rs
src/policy/: config.rs  github_override.rs  mod.rs  registry.rs
src/policy/rules/: allowed_backend_domains.rs  allowed_proxy_plugins.rs  backend_scheme.rs  forbid_tls_verify_disabled.rs  mod.rs  require_auth_plugin.rs  timeout_bands.rs
src/review/: github.rs  mod.rs  pr_comment.rs
src/secrets/: allocator.rs  bundle.rs  delivery.rs  github_api.rs  mod.rs  placeholder.rs  resolver.rs
src/validate/: mod.rs  reporter.rs  runner.rs
tests/fixtures/overlay-test/ferrum/proxies/: httpbin.yaml
tests/fixtures/simple-config/ferrum/consumers/: alice.yaml
tests/unit/: apply_tests.rs  assembler_tests.rs  cli_tests.rs  diff_tests.rs  env_tests.rs  http_client_tests.rs  import_tests.rs  jwt_tests.rs  loader_tests.rs  mod.rs  ownership_tests.rs  policy_tests.rs  repo_config_tests.rs  review_tests.rs  schema_tests.rs  secrets_tests.rs  state_tests.rs  validate_tests.rs
(+3 files in other folders)
