[package]
name = "gitforgeops"
version = "0.1.0"
edition = "2021"
description = "GitOps workflow for managing Ferrum Edge gateway configuration via pull requests"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/ferrum-edge/ferrum-edge-git-forge-ops"

[[bin]]
name = "gitforgeops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
glob = "0.3"
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
