[package]
name = "gitforgeops"
version = "0.1.0"
edition = "2021"
description = "GitOps workflow for managing Ferrum Edge gateway configuration via pull requests"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/ferrum-edge/ferrum-edge-git-forge-ops"

[[bin]]
name = "gitforgeops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
glob = "0.3"
sha2 = "0.11"
walkdir = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
crypto_box = { version = "0.9", features = ["seal"] }
rand = "0.9"
age = { version = "0.11", features = ["ssh", "armor"] }
ssh-key = { version = "0.6", features = ["ed25519"] }

[dev-dependencies]
tempfile = "3"
base64 = "0.22"
